--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Login</string>
     <string name="prefs_file">com.example.login.PREFERENCE_FILE_KEY</string>
+    <string name="facebook_app_id">427202045101219</string>
+    <string name="fb_login_protocol_scheme">fb427202045101219</string>
 </resources>
